10tv.com (archived on 2013-12-23)
{
  "alexa_rank": 29900,
  "analysis_subcorpus": true,
  "categories": "education;entertainment;newsandmedia",
  "char_count": 14952,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.36,
  "homepage_snapshot_redirected_domain": "10tv.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929230053id_/http://www.10tv.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929230053id_/http%3A//10tv.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "10tv.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131223062727id_/http%3A//www.10tv.com/content/system/shared/links/privacy/10tv",
  "policy_title": "Privacy Policy | The Columbus Dispatch",
  "policy_url": "10tv.com/content/system/shared/links/privacy/10tv",
  "sha1": "1b9c3840b81afd52900a915a9992ecfa916b6b75",
  "simhash": 2341185528734285775,
  "simhash_updated": true,
  "site_hostname": "10tv.com",
  "site_url": "http://10tv.com",
  "smog": 15.77,
  "strict_updated": true,
  "timestamp": "20131223062727",
  "word_count": 2440,
  "year": 2013
}

--- a/1/10/10t/10tv.com.md
+++ b/1/10/10t/10tv.com.md
@@ -1,65 +1,88 @@
-> *The following text is extracted and transformed from the 10tv.com privacy policy that was archived on 2005-09-24. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20050924031702id_/http%3A//10tv.com/global/story.asp%3Fs%3D18990) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 10tv.com privacy policy that was archived on 2013-12-23. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20131223062727id_/http%3A//www.10tv.com/content/system/shared/links/privacy/10tv) for the most accurate reproduction.*
 
-# WBNS-10TV Columbus, Ohio: This Web Site’s Privacy Policy
+# Privacy Policy | The Columbus Dispatch
 
-This Web Site (the "Web site") provides a variety of online services, from interactive entertainment to electronic commerce via its relationship with Gannaway Web Holdings, LLC d/b/a WorldNow ("WorldNow"). WorldNow is the host of this Web site. Because the success of this Web site is dependent on building and maintaining goodwill with our customers, this Web site and WorldNow (hereinafter collectively referred to as "we" or “us” or "our") are committed to implementing measures designed to protect the privacy of those using our services. Moreover, we see it as our responsibility to set examples and help establish the standards for privacy on the Internet.
+**PRIVACY POLICY**
 
-Although we respect the privacy of all those who visit the Web site and use our online services, we do collect information from our Web site's members and visitors. This Privacy Policy governs your interaction with the Web site, and your registration for and use of this station's online services. Except as set forth within this Privacy Policy and this Web Site's Terms of Service and/or other published guidelines, we do not release personally identifiable information about this Web site's members and visitors without their permission.
+Please read our Privacy Policy below, which applies to any Web site for the Dispatch Printing Company, WBNS 10TV, Inc. RadiOhio, Inc. and/or their affiliates that collect data and display this policy, including the following Web sites:  
 
-Please note that we review these privacy practices from time to time, and that these practices are therefore subject to change. We ask that you periodically review this page to ensure continuing familiarity with the most current version of this Web site's Privacy Policy. To contact us about privacy issues, to report a violation of this Web site's Privacy Policy, or to raise any other issue regarding the Web site, please e-mail us at [Info@WorldNow.com](mailto:Info@WorldNow.com).
+Dispatch.com; 10tv.com; 971thefan.com; ONNradio.com; ESPNColumbus.com; BuckeyeXtra.com; BlueJacketsXtra.com; DispatchPolitics.com; DispatchNIE.com; ColumbusAlive.com; ColumbusCrave.com; ColumbusCEO.com; Capital-Style.com; ColumbusParent.com; ColumbusCars.com; ColumbusJobs.com; ColumbusRealEstate.com; DispatchClassifieds.com; ThisWeekNews.com; and ColumbusMonthly.com. 
 
-**The information we gather**
+This Privacy Policy applies to (a) all users of any of the above Web sites; (b) consumers who provide us with information in connection with their subscriptions to or use of print publications affiliated with any of the above Web sites.  The Policy describes our collection and use of users’ personal information (for example, information that identifies a specific person, such as full name, street address, telephone number, e-mail address, or credit card number) where that information is not otherwise made publicly available on our Web sites and associated online services.  It also describes generally our practices for handling non-personal information collected from you in the aggregate (for example, information on interests, demographics and site usage), or from a third party to the extent such information is associated with a particular device, user or user account.
 
-We gather two types of information about this Web site's users:
+**INFORMATION WE COLLECT ABOUT YOU AND HOW WE USE IT.**
 
-(1) **Non-personally identifiable information:** When visitors come to the Web site, we collect and aggregate information indicating, among other things, which pages were visited, the order in which they were visited, and which hyperlinks were "clicked." Collecting such information involves the logging of IP addresses, operating system and browser software used by each visitor to the Web site. Although such information is not personally identifiable, we can determine from the IP address a visitor's Internet Service Provider and the geographic location of his or her point of connectivity.
+We collect information as part of operating our Web sites and services.  We respect the privacy of Web visitors, and we do not sell personally identifiable information about the users of our services, including the e-mail addresses, names, street addresses, phone numbers or interests information.  We may share, however, information with providers, vendors, or business partners involved in the operating of our Web sites and/or services.
 
-The non-personally identifiable information we collect helps us diagnose problems with our server, administer the Web site, identify the most popular areas of the Web site, and determine the effectiveness of our promotional activities. In addition, we may disclose some of this information to advertisers to inform them of the number of people who have seen and/or clicked through their advertisements.
+**Personal information.**
 
-For the same purposes, we use "cookies"---that is, small text files placed on your computer's hard drive---to help us determine the type of content and sites to which you link, the length of time you spend at any particular area of the Web site, and your usage of our services offered via the Web site. Cookies also tell us which advertising you have seen on the Web site.  At certain times, we may use  outside advertising companies to display advertisements on the Web site that may contain cookies ("banner ads"). These banner ads collect information stored by the advertising company and we do not have access to this information.
+**Home phone numbers.**   We may ask for your home phone number to help us determine whether you are a print subscriber to any of our affiliated print publications.  This information is valuable to us and also will allow us to extend future Web benefits to users of our Web sites who are also print subscribers.  We do not use your phone number to telemarket. If you are a print subscriber, however, you may already have received or will receive periodic phone calls asking whether you are satisfied with the quality of your home-delivery service.
 
-Essentially, cookies are your identification cards for our computers, or servers, that placed them there. Cookies are only read by the server that placed them, and are unable to execute any code or virus. Cookies allow us to serve you better and more efficiently, and to personalize your experience at the Web site. Nevertheless, you are able to control how and whether cookies will be accepted by your web browser. For more information on how to do so, please refer to the documentation accompanying your browser.
+**E-mail addresses.**   If you provide your e-mail address to us as part of any interaction with our Web sites, you will periodically receive promotional e-mail messages about services offered by our Web sites and associated companies, and third-party marketers on the Web.  These promotions will be tailored to the interest categories you have indicated and are controlled by us.  Your identity will not be revealed to an unaffiliated third-party marketer unless you respond directly to the marketer’s offer and provide your information.  If you have a print or online subscription with us, we may also send you periodic reminders about your subscriptions.
 
-(2) **Personally identifiable information:** In certain areas of the Web site, such as online surveys and contests, the Web site may require that you provide personally identifiable information (including, for example, zip code, age, income, and e-mail address, and when applicable, credit card information). WorldNow, as host of the Web site, has access to this information. In addition, when registering to set up an account to use certain services of the Web site such as e-mail, chat rooms, and forums, or to receive certain newsletters or specifically targeted information ("Services"), we do require that you provide a valid e-mail address.
+**E-mail opt-out process.   **You may “opt out” of receiving e-mail promotional offers. To change your mailings and newsletter settings:
 
-We do not knowingly collect personally identifiable information from children (defined herein as minors younger than 13 years of age) without obtaining parental consent. Before registering for an account to use the Services of the Web site, we ask that all minors have their parents read our Privacy Policy. Before and during the registration process, we encourage all minors to include a parent or guardian in the process.
+1.         Click here for [My Newsletters.](https://web.archive.org/content/content/system/modules/com.dispatch.exacttarget/pages/newsletters.jsp)
 
-We do not control the acts of this Web site's members or visitors. All members and visitors should be aware that, when they disclose personally identifiable information in a bulletin board, chat room, guestbook, or other forum, the information may be collected and used by others to send that person unsolicited e-mail from other parties outside this Web site or WorldNow. In the event that you encounter any user on this Web site who is improperly collecting or using information about you or other users, please contact [Info@WorldNow.com](mailto:Info@WorldNow.com).
+2.         Enter the email address and password you used to register
 
-**How we use (and do not use) the information we gather**
+3.         Then click the Sign In button.
 
-Please take some time to familiarize yourself with the different ways we use the information that we gather. Keep in mind that, while we encourage all third parties involved---including affiliates and advertisers---to adhere to our policies regarding the privacy of this Web site's visitors and members and to otherwise handle personal information in a responsible manner, we cannot and do not assume any responsibility for any actions or omissions of third parties, including the manner in which they use information received either from us or independently. Nevertheless, in the event you encounter any third party associated with, or who claims association with us who you feel is improperly collecting or using information about you, please contact [Info@WorldNow.com](mailto:Info@WorldNow.com); we will be happy to forward your message to the third party.
+4.         Uncheck the Mailings box
 
-(1) **How we use (and do not use) non-personally identifiable information:** We use non-personally identifiable information in aggregate form to build higher quality, more useful online services by performing statistical analyses of the collective characteristics and behavior of the Web site's members and visitors, and by measuring demographics and interests regarding specific areas of the Web site. We provide statistical information based on this data to advertisers, affiliates, and other current and potential business partners. We also use the aggregate data to inform these third parties as to the number of people who have seen and clicked on links to their web sites.
+5.         Then click the Submit button.
 
-The Web site may contain links to other Internet web sites, including co-branded or other affiliated sites that may or may not be owned or operated by us. Unless otherwise explicitly stated, we are not responsible for the privacy practices or the content of such web sites, including such sites' use of any information (such as IP number, browser type, or operating system) collected when visitors to the web site click through links to those sites. Even though such information might not identify you personally, we strongly encourage you to become familiar with the privacy practices of those sites.
+**Information you share when you participate in Web-site activities such as contests and reader or viewer feedback.**  If you wish to engage in these activities, we will ask you to register and provide your personal information.  Unless you opt in during registration to receive e-mailings from us or consent to share your personal information with others, we will not use your information for any other activity.
 
-(2) **How we use (and do not use) personally identifiable information:** We provide notice to potential registrants of this Web site whose personally identifiable information will be collected during the registration process. Such notice is provided simultaneously with your registration with this website; moreover, this Privacy Policy itself serves as notice that such information is collected under those circumstances. You may not "opt in" to the registration process if you wish to have access to Services, and you may choose to "opt in" to receiving promotional materials from us and/or our affiliates, advertisers, or other business partners. If you "opt in" to receiving such promotional materials, we reserve the right to release any personally identifiable registration information regarding you to third parties who provide goods or services that we believe may be of interest to you. We will not release your credit card information to third parties unless necessary to complete a transaction between you and such a third party. If you decide that you would like to discontinue receiving promotional information from such third parties, please contact those third parties directly, or contact us at [Info@WorldNow.com](mailto:Info@WorldNow.com).
+**Information you share for user-generated content and public activities.**   We may offer you opportunities to engage in public activities.  “Public activities” are any actions you take online that are designed to be visible to other users, including comments, recommendations, reviews, ratings or any other items that you submit.  Any information you disclose in your public activities, along with your screen name or ID, or any image or photo, becomes public and may be used by us for online and offline promotional or commercial uses in any and all media.  If you choose to engage in public activities, you should be aware that any personal information you submit there can be read, collected, or used by other users of these areas, and could be used to send you unsolicited messages.  We are not responsible for the personally identifiable information you choose to submit in these forums, and we have no responsibility to publish, take down, remove or edit any of your public activities or any of your submissions that are a result of your public activities.
 
-We limit our own e-mail contact and solicitations to those customers who have "opted in" to receiving such communications. The solicitations are limited in that they, among other things, will clearly indicate the originator of the e-mail and provide the customer with a method of "opting out" of receiving future communications of a similar nature.
+When you share or recommend (with or without adding your own comments) any of our content on your Facebook profile, that action is governed by the Facebook Privacy Policy.  We do not track or store a record of those comments or actions.
 
-In addition, we sometimes use demographic data to decide which advertisements and sponsor messages to show to which members. As an example, if Sponsor XYZ wishes to display their advertising only to female members of this Web site, we use member registration data to ensure that Sponsor XYZ's ads are displayed only to female members.
+If you have registered for an account with any of our Web sites, we will track and aggregate your public activities.  By choosing to participate in public activities, you are electing to share and display such public activities via any of our Web sites. Also, public activities may be included in RSS feeds, APIs and made available to other Web sites via other formats. As a result, your public activities may appear on other Web sites, blogs, or feeds. Keep in mind that we are not responsible for any personal information you choose to make public via your public activities, and you agree that such sharing will be deemed to have been done by you, not any of the above Web sites.  
 
-Finally, we may use individual members' data to "pre-populate" forms, which are displayed for the purpose of collecting individual data by us and/or our sponsors. In no case does pre-populating a form transfer any data to any advertiser or third party. Only if the member voluntarily requests that such data be transferred will any transfer take place---for example, if/when a member clicks a "submit form" button or other button.
+**Letters to the Editor.**   Letters to the Editor to any affiliated print publication are presumed to be intended for publication.  Identifying information provided with the letter is used only for verification of the letter’s authenticity.  Letter authors’ real names, cities of residence and title (where applicable) are published along with the letter.  Due to the volume of letters received, we cannot guarantee either publication or a personal response to any given letter.
 
-We reserve the right to release any and all information contained within our access logs concerning any visitor or member when that visitor or member is in violation of our Terms of Service or other published guidelines, or partakes (or is reasonably suspected of partaking) in any illegal activity, even without a subpoena, warrant, or other court order, and to release such information in response to discovery requests, or in response to any circumstance which we, in our sole discretion, deem an emergency. We cooperate with law enforcement agencies in identifying those who may be using our servers or services for illegal activities. We also reserve the right to report any suspected illegal activity to law enforcement for investigation or prosecution.
+**E-mail to our staff members and departments:**   If you choose to interact with any of our staff members or departments, our staff members have broad discretion as to the handling of mail sent to their individual accounts. The company reserves the right to track or record such correspondence when circumstances warrant. Electronic mail sent to departments within our companies is handled at the department's discretion. We do not have a policy of sharing contents of e-mail with any other entities. However, we reserve the right to disclose such correspondence as necessary to protect the companies’ legal interests.
 
-If and when we sponsor promotions or sweepstakes, or third parties sponsor promotions or sweepstakes in conjunction with us, either we or the third party will post relevant privacy information in the official rules and/or registration area for the promotion or sweepstakes. That privacy information, to the extent it conflicts with this Privacy Policy, will govern that particular promotion or sweepstakes.
+**Advertising submissions.** Personal information provided with online classified advertising submissions is used only for verification and billing purposes.
 
-**Security**
+**Credit-card purchasing.   **If you make a credit-card purchase from any of our Web sites that offer that option, we are committed to making your credit-card purchase as secure as possible, and to ensuring your privacy.  Before you make a purchase from any of our Web sites, please read the following:
 
-All information gathered on the Web site is stored within a WorldNow controlled database accessible only to us to protect the loss, misuse, or alteration of the information under our control. However, as effective as any security measure implemented by us may be, no security system is impenetrable. We cannot guarantee the security of our database, nor can we guarantee that information you supply will not be intercepted while being transmitted to us over the Internet. Questions regarding this Privacy Policy should be directed to us at [Info@WorldNow.com](mailto:Info@WorldNow.com).
+●    To process your order, we need to know your name, e-mail address, billing address, credit card number and expiration date, and telephone number.
 
-**Changing/deleting personal information**
+●    The e-mail address and the password you choose will become your “identifier” – we will use it to process and fulfill your order and to welcome you back to the site for future purchases.  If you choose to receive future promotional notices from any of our Web sites that you use, we will save your e-mail address for that purpose. If you choose not to receive future e-mail notices, we will not use your information for anything other than to process your order.  Your telephone number is needed in case we are unable to notify you by e-mail of any questions about your order. 
 
-If you would like to have your personally identifiable information changed or removed from our database, please contact us at [Info@WorldNow.com](mailto:Info@WorldNow.com), and we will use reasonable efforts to comply with your request. Keep in mind, however, that there will be residual information that will remain within our databases, access logs, and other records, which may or may not contain such personally identifiable information. The residual information will not be used for commercial purposes; however we reserve the right, from time to time, to recontact former customers or users of this Web site.
+●    Personal information you provide us is solely the property of the Web site(s) from which you make a purchase and is stored on a separate, secured server that is accessible only to authorized personnel.  We do not track individual behavior of our customers while they are making credit-card purchases.  We will record only aggregate numbers of products purchased and general traffic patterns on the site; that information will be used only to help us continue to improve.  It will not be shared with any other parties.
 
-**Third-Party Ad Serving**
+●    Secure Sockets Layer (SSL) technology is used to encrypt and protect your credit-card account information, and transactions are carried out on a secure server (please be sure that your own Web browser, such as Netscape or Explorer, is able to handle secure transactions).  Products are billed to your account when they are shipped or electronically delivered.
 
-We use third-party advertising companies to serve ads when you visit this Web site.  These companies may use information (not including your name, address or telephone number) about your visits to this and other web sites in order to provide advertisements about goods and services of interest to you.  If you would like more information about this practice and to know you choices about not having this information used by these companies, please contact us at [Info@WorldNow.com](mailto:Info@WorldNow.com), or click here <http://www.networkadvertising.org/optout_nonppii.asp>.
+●    By ordering from any of our Web sites, you consent to terms of this Privacy Policy. If you have concerns about this policy, please e-mail **[NOTE:   NEED TO INSERT AN EMAIL ADDRESS]**
 
-**Questions?**
+**Non-personal information.**
 
-Questions regarding this Privacy Policy should be directed to us at [Info@WorldNow.com](mailto:Info@WorldNow.com).
+**Advertising network information.** Google is an ad network partner that displays ads on our Web sites.  To improve your ad experience on our Web sites and elsewhere on the Internet, we may send non-personal information to Google based on your browser’s activities, such as type of pages viewed and categories of interests, so that the advertising you see is relevant to you. Google also may use information regarding its own users to select which ads to display.  Click here (link to: <http://www.google.com/intl/en/policies/privacy/>) to learn more about Google’s ad practices, including how to opt out of using anonymous information to select which ads to show you.  BlueKai is a data partner that helps our companies target relevant ads to our Web site users.  BlueKai collects non-personally identifiable information regarding offline collected attributes and digital usage patterns of users of mobile devices and computers. The information is combined together with other non-personally identifiable information that is obtained from third parties in order to influence which types of marketing messages and other content are displayed to users as “Preference Data.” BlueKai uses non-personally identifiable means, including “cookies,” “pixel tags,” and in some instances, statistical ID’s, to collect and store Preference Data.  Click here (link to: <http://bluekai.com/privacypolicy.php>) to learn more about BlueKai’s data collection practices.
 
-_Effective date: July 1, 2004_
+**Information on Web traffic.   **When visitors come to our Web sites, we use standard Web server log files to collect and aggregate information indicating, among other things, which pages were visited, the order in which they were visited, and which hyperlinks were “clicked.”  Collecting such information involves the logging of IP addresses, and operating system and browser software used by each visitor to the Web sites.
+
+  
+This non-personally identifiable information is used only in the aggregate – to identify the most popular areas of our Web sites, or determine the effectiveness of our promotional activities, for example.  We may disclose some of this aggregated, non-personally identifiable information to advertisers to inform them of the number of people who have seen and/or clicked through their advertisements.  Your usage on our site is not revealed to third parties.
+
+  
+**Cookies.**   For the same purposes, we use “cookies” – small text files placed on your computer’s hard drive – to help us determine the type of content and sites to which you link, the length of time you spend at any particular area of the Web sites, and your usage of our services offered via the Web sites.  Cookies also tell us which advertising you have seen on the Web sites.  At certain times, we may use outside advertising companies to display advertisements on the Web sites that may contain cookies (“banner ads”). These banner ads collect information stored by the advertising company, and we do not have access to this information.
+
+  
+Essentially, cookies are your identification cards for our computers, or servers, that placed them there. Cookies are read only by the server that placed them, and are unable to execute any code or virus. Cookies allow us to serve you better and more efficiently, and to personalize your experience at the Web sites. Nevertheless, you are able to control how and whether cookies will be accepted by your Web browser. For more information on how to do so, please refer to the documentation accompanying your browser.
+
+**LINKS TO AND CO-BRANDING WITH OTHER SITES.**
+
+As a courtesy to our users, some of our Web sites may contain links to other sites.  Please be aware that we are not responsible for the content or privacy practices of such other sites.  We encourage our users to be aware when they leave our site and to read the privacy statements of any other site that collects personally identifiable information.
+
+Some the services offered by our Web sites are co-branded with another company, or partner.  If you register to or use such a service, both our Privacy Policy and the partner’s privacy statement may be displayed.  If so, both we and the partner will receive the information you provide.
+
+**SPECIAL NOTE ON CHILDREN’S PRIVACY.**
+
+**Children’s Online Privacy Protection Act.   **We feel strongly about protecting the privacy of children. We encourage children to involve their parents in any interactive activity they participate in online.  Our Web sites are general-audience Web sites, and some of our Web sites contain content that is directed to children under 13.  Areas of our Web sites that contain content directed to children under 13 (for example, DispatchNIE.com and the NOW! section for kids in Dispatch.com) are available to all users without registration.  While no personal identifying information is collected from the unregistered users of these areas of our Web sites, aggregated general information is collected from unregistered users of these areas and is used only for aggregate analysis.
+
+Otherwise, our Web sites require users to register and give us personally identifiable information – name, address, age, and e-mail address – in order to gain access to the site.  In compliance with the Children’s Online Privacy Protection Act, our Web sites will not knowingly allow persons under the age of 13 to register as users.  If our Web site operators later learn that any registered user is under the age of 13, we will take appropriate steps to remove the user information from our databases and we will restrict the user from future access to our Web sites. 
+
+157-109:451960
