our365.com (archived on 2013-12-27)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "education;health;shopping",
  "char_count": 14908,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.37,
  "homepage_snapshot_redirected_domain": "mom365.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131002001757id_/http://www.mom365.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131002095907id_/http%3A//our365.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mom365.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227065356id_/http%3A//www.mom365.com/aboutus/privacy.aspx",
  "policy_title": "Mom365 Privacy Policy | Mom365.com",
  "policy_url": "mom365.com/aboutus/privacy.aspx",
  "sha1": "e9e9ba13869ed485142ff1c33f3ca5da127109fc",
  "simhash": 10094611121485113533,
  "simhash_updated": true,
  "site_hostname": "our365.com",
  "site_url": "http://our365.com",
  "smog": 16.81,
  "strict_updated": true,
  "timestamp": "20131227065356",
  "word_count": 2319,
  "year": 2013
}

--- a/o/ou/our/our365.com.md
+++ b/o/ou/our/our365.com.md
@@ -1,6 +1,6 @@
-> *The following text is extracted and transformed from the our365.com privacy policy that was archived on 2013-05-27. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20130527151058id_/http%3A//www.mom365.com/AboutUs/Privacy.aspx) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the our365.com privacy policy that was archived on 2013-12-27. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20131227065356id_/http%3A//www.mom365.com/aboutus/privacy.aspx) for the most accurate reproduction.*
 
-# Mom365 Privacy Policy - Mom365.com
+# Mom365 Privacy Policy | Mom365.com
 
 Effective Date: January 30, 2012
 
