ads789.com (archived on 2014-02-14)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "uncategorized",
  "char_count": 7937,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.84,
  "homepage_snapshot_redirected_domain": "ads789.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140517003028id_/http://ads789.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140517003028id_/http%3A//ads789.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": null,
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140214050550id_/http%3A//50.62.128.162/privacy.php",
  "policy_title": "Privacy Policy for ewebse.com",
  "policy_url": "50.62.128.162/privacy.php",
  "sha1": "8cb119f7f15408e5aa03af47c19525578a30a2bf",
  "simhash": 11283352217056909794,
  "simhash_updated": false,
  "site_hostname": "ads789.com",
  "site_url": "http://ads789.com",
  "smog": 16.49,
  "strict_updated": false,
  "timestamp": "20140214050550",
  "word_count": 1247,
  "year": 2014
}

--- a/a/ad/ads/ads789.com.md
+++ b/a/ad/ads/ads789.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the ads789.com privacy policy that was archived on 2013-06-26. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20130626012717id_/http%3A//www.ewebse.com/privacy.php) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the ads789.com privacy policy that was archived on 2014-02-14. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20140214050550id_/http%3A//50.62.128.162/privacy.php) for the most accurate reproduction.*
 
 # Privacy Policy for ewebse.com
 
